--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-pcaps/responder/attack.pcapng filter=lfs diff=lfs merge=lfs -text
-pcaps/responder/normal.pcapng filter=lfs diff=lfs merge=lfs -text
+*.pcapng filter=lfs diff=lfs merge=lfs -text
